Defining midnightblue via html now.

--- a/GWtheme/beamercolorthemeCaltech.sty
+++ b/GWtheme/beamercolorthemeCaltech.sty
@@ -20,6 +20,7 @@
 \definecolor{CaltechYellowGrey}{HTML}{AAA99F}
 \definecolor{CaltechGreenGrey}{HTML}{849895}
 \definecolor{FontColor}{HTML}{003262}
+% \definecolor{FontColor}{HTML}{191970}  % Midnightblue
 
 
 % -- Actual theme definition --------------------------------------------------
