--- a/GWtheme/beamercolorthemeMPI.sty
+++ b/GWtheme/beamercolorthemeMPI.sty
@@ -29,7 +29,7 @@
 
 % \definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
 % \definecolor{FontColor}{HTML}{29485d}  % Background color from official Max Planck Powerpoint templates
-\definecolor{FontColor}{rgb}{0.1, 0.1, 0.44}  % Midnightblue
+\definecolor{FontColor}{HTML}{191970}  % Midnightblue
 
 
 % -- Actual theme definition --------------------------------------------------
