Updating background of headline to gray.

--- a/GWtheme/beamercolorthemeCaltech.sty
+++ b/GWtheme/beamercolorthemeCaltech.sty
@@ -25,7 +25,7 @@
 
 % -- Actual theme definition --------------------------------------------------
 \setbeamercolor{titlelike}{fg=CaltechOrange,bg=CaltechOrange!36}
-\setbeamercolor{headline}{fg=CaltechOrange,bg=CaltechOrange!36}
+\setbeamercolor{headline}{fg=CaltechOrange,bg=CaltechLightGrey}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=CaltechDarkBlue,bg=white}
 % \setbeamercolor{title page}{fg=CaltechDarkGreen,bg=CaltechDarkGreen!36}
