--- a/GWtheme/beamercolorthemeMPI.sty
+++ b/GWtheme/beamercolorthemeMPI.sty
@@ -34,7 +34,7 @@
 
 % -- Actual theme definition --------------------------------------------------
 \setbeamercolor{titlelike}{fg=MPIGreen,bg=MPILightGreen}
-\setbeamercolor{headline}{fg=MPIGreen,bg=MPILightGreen}
+\setbeamercolor{headline}{fg=MPIGreen,bg=MPIGray!50}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
 % \setbeamercolor{title page}{fg=MPILightGreen!50!FontColor}  % Creates nice bluish tone on titlepage
