--- a/GWtheme/beamercolorthemeMPIGravMixed.sty
+++ b/GWtheme/beamercolorthemeMPIGravMixed.sty
@@ -34,7 +34,7 @@
 
 % -- Actual theme definition --------------------------------------------------
 \setbeamercolor{titlelike}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
-\setbeamercolor{headline}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
+\setbeamercolor{headline}{fg=MPIGravDarkRed,bg=MPIGray!50}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
 \setbeamercolor{title page}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
