--- a/GWtheme/beamercolorthemeMPIMixed.sty
+++ b/GWtheme/beamercolorthemeMPIMixed.sty
@@ -34,7 +34,7 @@
 
 % -- Actual theme definition --------------------------------------------------
 \setbeamercolor{titlelike}{fg=MPDLOrange,bg=MPDLOrange!36}
-\setbeamercolor{headline}{fg=MPDLOrange,bg=MPDLOrange!36}
+\setbeamercolor{headline}{fg=MPDLOrange,bg=MPIGray!50}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
 % \setbeamercolor{title page}{fg=MPIGreen,bg=MPIGreen!36}
