Adding rounded innertheme as default.

--- a/GWtheme/beamerinnerthemeGW.sty
+++ b/GWtheme/beamerinnerthemeGW.sty
@@ -10,6 +10,11 @@
 % -- Purpose of this file: specify how things look that make up content of the
 % -- frame. For example style of enumerations etc or the table of contents.
 
+% -- Use base class innertheme here, overwrite selected stuff afterwards ------
+\useinnertheme{rounded}
+% \setbeamertemplate{blocks}[rounded]
+
+
 % -- Appearance and margins for items -----------------------------------------
 % \setbeamertemplate{itemize item}{\textbullet}
 \setbeamertemplate{itemize item}{$\blacktriangleright$}
