--- a/GWtheme/beamercolorthemeMPIGrav.sty
+++ b/GWtheme/beamercolorthemeMPIGrav.sty
@@ -15,6 +15,8 @@
 \definecolor{MPIGray}{HTML}{666666}
 \definecolor{MPIBGGray}{HTML}{EEEEEE}
 \definecolor{MPILightGray}{HTML}{F6F6F6}
+\definecolor{MPIBlue}{HTML}{00445F}
+\definecolor{MPISecondaryBlue}{HTML}{006699}
 
 
 % -- MPI for Gravitational Physics Colors -------------------------------------
