Experimenting with fourier orns items.

--- a/GWtheme/beamerinnerthemeGW.sty
+++ b/GWtheme/beamerinnerthemeGW.sty
@@ -19,6 +19,9 @@
 % \setbeamertemplate{itemize item}{\textbullet}
 \setbeamertemplate{itemize item}{$\blacktriangleright$}
 \setbeamertemplate{itemize subitem}{--}
+% \RequirePackage{fourier-orns}
+% \setbeamertemplate{itemize subitem}{{\LARGE\starredbullet}}
+% \setbeamertemplate{itemize subitem}{\leftblackhand}  % Not available yet...
 \setbeamertemplate{itemize subsubitem}{\textbullet}
 \setlength{\leftmargini}{1.25em}
 \setlength{\leftmarginii}{1em}
