Recompiling slides background and main file.

--- a/google_slides_template.tex
+++ b/google_slides_template.tex
@@ -15,28 +15,47 @@
 
 % -- Adjust following for different templates
 % \usecolortheme{MPIGravMixed}
-\usecolortheme{MPIMixed}
+% \usecolortheme{MPIMixed}
 % \usecolortheme{MPI}
 % \usecolortheme{MPIGrav}
 % \usecolortheme{Caltech}
+\usecolortheme{MPIBlue}
 
-% \setbeamertemplate{background}[GWWithPattern]
+\togglefalse{gwbar@progressbar}  % Avoid errors from divisions through zero or so
 
 
 \makeatletter
 
-% \setlength{\themeGW@headerskip}{0.05\paperheight}
+% -- Adjust heights of design elements
 \setlength{\themeGW@headerskip}{0.0667\paperheight}
+% \setlength{\themeGW@headerskip}{0.08\paperheight}
 
 \setlength{\themeGW@footupshift}{0.036\paperheight}  % Adjust author position
 
 % -- Hide footline stuff
-% \pgfdeclareimage[height=0.1\paperheight]{logo}{}
-\pgfdeclareimage[height=0.1\paperheight]{logo}{logos/MPI-AEI_wide_E_neg_cmyk}  % Avoid error, not shown anyway
+\pgfdeclareimage[height=0.1\paperheight]{logo}{logos/MPI-AEI_wide_E_neg_cmyk}
+% -- To hide logo, uncomment above line
 \togglefalse{themeGW@logoinfoot}  % Determines if logo shown on sectionpages or not
-% \titlegraphic{}  % Determines if logo shown on titlepage or not
+\titlegraphic{}  % Determines if logo shown on titlepage or not
 \setbeamertemplate{footline}[GW][false]  % Hide framenumbers, shall be set manually in Google slides
 
+
+% \setbeamertemplate{background}[GWWithPattern]
+% \setlength{\themeGW@upperleftbg}{0.1\paperheight}  % Default: 0.1\paperheight
+% \setlength{\themeGW@upperrightbg}{0.14\paperheight}  % Default: 0.14\paperheight
+% % \setlength{\themeGW@upperrightbg}{0.1\paperheight}  % Default: 0.14\paperheight
+
+
+% \tikzset{
+%   fillsquare1/.style={
+%     CaltechDarkGrey!80!fg,
+%     line width=0.8pt,
+%   },
+%   fillsquare2/.style={
+%     CaltechLightGrey!20!fg,
+%     line width=0.8pt,
+%   },
+% }
 \makeatother
 
 
