--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 
 % \setbeamertemplate{frametitle}[GW][newline]
 % \setbeamertemplate{frametitle}[GW][none]
-% \setbeamertemplate{frametitle}[GWsection]%[newline]
+\FramTitleAutoInsertSection
 
 
 % -- Activate/deactivate at will
@@ -43,8 +43,6 @@
 % \logo{\includegraphics[height=0.1\paperheight]{logos/MPI-AEI_wide_E_neg_cmyk.pdf}}
 % \logo{\pgfdeclareimage[height=0.1\paperheight]{themeCaltech@background_logo}{logos/MPI-AEI_wide_E_neg_cmyk}}
 
-
-\usepackage{appendixnumberbeamer}  % Use of \appendix stops framenumber counting
 
 
 \title[Your Short Title]{Your Presentation}
