Recompiling slides templates with logos on titlepage.

--- a/google_slides_template.tex
+++ b/google_slides_template.tex
@@ -15,11 +15,11 @@
 
 % -- Adjust following for different templates
 % \usecolortheme{MPIGravMixed}
-% \usecolortheme{MPIMixed}
+\usecolortheme{MPIMixed}
 % \usecolortheme{MPI}
 % \usecolortheme{MPIGrav}
 % \usecolortheme{Caltech}
-\usecolortheme{MPIBlue}
+% \usecolortheme{MPIBlue}
 
 \togglefalse{gwbar@progressbar}  % Avoid errors from divisions through zero or so
 
@@ -36,7 +36,7 @@
 \pgfdeclareimage[height=0.1\paperheight]{logo}{logos/MPI-AEI_wide_E_neg_cmyk}
 % -- To hide logo, uncomment above line
 \togglefalse{themeGW@logoinfoot}  % Determines if logo shown on sectionpages or not
-\titlegraphic{}  % Determines if logo shown on titlepage or not
+% \titlegraphic{}  % Determines if logo shown on titlepage or not
 \setbeamertemplate{footline}[GW][false]  % Hide framenumbers, shall be set manually in Google slides
 
 
